Language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> universo
Rule 1     universo -> beginScenario beginTask
Rule 2     universo -> empty
Rule 3     universo -> ignore
Rule 4     beginScenario -> beginS endS
Rule 5     beginS -> TkBeginScenario
Rule 6     endS -> scenarioInstructions TkEndScenario
Rule 7     endS -> TkEndScenario
Rule 8     scenarioInstructions -> scenarioInstructions scenarioInstruction
Rule 9     scenarioInstructions -> scenarioInstructions TkSemiColon
Rule 10    scenarioInstructions -> scenarioInstruction
Rule 11    scenarioInstructions -> TkSemiColon
Rule 12    scenarioInstruction -> placeBlock
Rule 13    scenarioInstruction -> startAt
Rule 14    scenarioInstruction -> boolean
Rule 15    scenarioInstruction -> integer
Rule 16    position -> TkNum TkNum
Rule 17    orientation -> TkNorth
Rule 18    orientation -> TkEast
Rule 19    orientation -> TkWest
Rule 20    orientation -> TkSouth
Rule 21    color -> TkRed
Rule 22    color -> TkBlue
Rule 23    color -> TkGreen
Rule 24    color -> TkYellow
Rule 25    placeBlock -> TkPlaceBlock TkNum TkAt position TkSemiColon
Rule 26    placeBlock -> TkPlaceBlock TkBNum TkAt position TkSemiColon
Rule 27    placeBlock -> TkPlaceBlock color TkAt position TkSemiColon
Rule 28    startAt -> TkStartAt position TkHeading orientation TkSemiColon
Rule 29    boolean -> TkBoolean TkId TkEqual TkTrue TkSemiColon
Rule 30    boolean -> TkBoolean TkId TkEqual TkFalse TkSemiColon
Rule 31    integer -> TkInteger TkNId TkEqual TkNum TkSemiColon
Rule 32    boolExpression -> boolExpression TkEquiv boolTerm
Rule 33    boolExpression -> boolExpression TkNotEqual boolTerm
Rule 34    boolExpression -> boolTerm
Rule 35    boolTerm -> boolTerm TkAnd boolFactor
Rule 36    boolTerm -> boolTerm TkOr boolFactor
Rule 37    boolTerm -> boolFactor
Rule 38    boolFactor -> TkNot boolElement
Rule 39    boolFactor -> boolElement
Rule 40    boolElement -> boolId
Rule 41    boolElement -> boolC
Rule 42    boolElement -> detectLeft
Rule 43    boolElement -> detectRight
Rule 44    boolElement -> detectFront
Rule 45    boolElement -> idBlockIs
Rule 46    boolElement -> boolIntExpression
Rule 47    boolElement -> TkOpenParent boolExpression TkCloseParent
Rule 48    boolC -> TkTrue
Rule 49    boolC -> TkFalse
Rule 50    detectLeft -> TkDetectL
Rule 51    detectRight -> TkDetectR
Rule 52    detectFront -> TkDetectF
Rule 53    idBlockIs -> TkLastIdBlockIs TkNum
Rule 54    idBlockIs -> TkLastIdBlockIs TkBNum
Rule 55    idBlockIs -> TkLastIdBlockIs color
Rule 56    boolId -> TkId
Rule 57    boolIntExpression -> intExpression TkEquiv intExpression
Rule 58    boolIntExpression -> intExpression TkNotEqual intExpression
Rule 59    boolIntExpression -> intExpression TkLessT intExpression
Rule 60    boolIntExpression -> intExpression TkLessEq intExpression
Rule 61    boolIntExpression -> intExpression TkGreatT intExpression
Rule 62    boolIntExpression -> intExpression TkGreatEq intExpression
Rule 63    intExpression -> intExpression TkPlus intTerm
Rule 64    intExpression -> intExpression TkMinus intTerm
Rule 65    intExpression -> intTerm
Rule 66    intTerm -> intTerm TkMult intElement
Rule 67    intTerm -> intTerm TkMod intElement
Rule 68    intTerm -> intElement
Rule 69    intElement -> intId
Rule 70    intElement -> intConst
Rule 71    intElement -> TkOpenParent intExpression TkCloseParent
Rule 72    intId -> TkNId
Rule 73    intConst -> TkNum
Rule 74    beginTask -> beginT endT
Rule 75    beginT -> TkBeginTask
Rule 76    endT -> taskInstruction TkEndTask
Rule 77    endT -> TkEndTask
Rule 78    taskInstruction -> taskInstruction instruction
Rule 79    taskInstruction -> taskInstruction TkSemiColon
Rule 80    taskInstruction -> instruction
Rule 81    taskInstruction -> TkSemiColon
Rule 82    instruction -> assignBool
Rule 83    instruction -> assignInt
Rule 84    instruction -> if
Rule 85    instruction -> repeat
Rule 86    instruction -> while
Rule 87    instruction -> beginInstruction
Rule 88    instruction -> defineInstruction
Rule 89    instruction -> willyInstruction
Rule 90    assignBool -> TkId TkEqual boolExpression
Rule 91    assignInt -> TkNId TkEqual intExpression
Rule 92    if -> TkIf boolExpression TkThen instruction
Rule 93    if -> TkIf boolExpression TkThen instruction TkElse instruction
Rule 94    repeat -> TkRepeat TkNum TkTimes instruction
Rule 95    while -> TkWhile boolExpression TkDo instruction
Rule 96    beginInstruction -> TkBegin taskInstruction TkEnd
Rule 97    beginInstruction -> TkBegin TkEnd
Rule 98    defineInstruction -> startDefine instDefine
Rule 99    startDefine -> TkDefine TkId
Rule 100   instDefine -> TkAs instruction
Rule 101   willyInstruction -> TkMove TkSemiColon
Rule 102   willyInstruction -> TkTurnL TkSemiColon
Rule 103   willyInstruction -> TkTurnR TkSemiColon
Rule 104   willyInstruction -> TkTake TkSemiColon
Rule 105   willyInstruction -> TkDrop TkSemiColon
Rule 106   willyInstruction -> TkLevel TkNum TkSemiColon
Rule 107   willyInstruction -> TkIdentify TkSemiColon
Rule 108   willyInstruction -> TkTerminate TkSemiColon
Rule 109   willyInstruction -> willyInstructionId TkSemiColon
Rule 110   willyInstructionId -> TkId
Rule 111   empty -> <empty>
Rule 112   ignore -> TkTab
Rule 113   ignore -> TkNewLine
Rule 114   ignore -> TkLineComment
Rule 115   ignore -> TkBlockComment
Rule 116   ignore -> TkSpace

Terminals, with rules where they appear

TkAnd                : 35
TkAs                 : 100
TkAt                 : 25 26 27
TkBNum               : 26 54
TkBegin              : 96 97
TkBeginScenario      : 5
TkBeginTask          : 75
TkBlockComment       : 115
TkBlue               : 22
TkBoolean            : 29 30
TkCloseParent        : 47 71
TkDefine             : 99
TkDetectF            : 52
TkDetectL            : 50
TkDetectR            : 51
TkDo                 : 95
TkDrop               : 105
TkEast               : 18
TkElse               : 93
TkEnd                : 96 97
TkEndScenario        : 6 7
TkEndTask            : 76 77
TkEqual              : 29 30 31 90 91
TkEquiv              : 32 57
TkFalse              : 30 49
TkGreatEq            : 62
TkGreatT             : 61
TkGreen              : 23
TkHeading            : 28
TkId                 : 29 30 56 90 99 110
TkIdentify           : 107
TkIf                 : 92 93
TkInteger            : 31
TkLastIdBlockIs      : 53 54 55
TkLessEq             : 60
TkLessT              : 59
TkLevel              : 106
TkLineComment        : 114
TkMinus              : 64
TkMod                : 67
TkMove               : 101
TkMult               : 66
TkNId                : 31 72 91
TkNewLine            : 113
TkNorth              : 17
TkNot                : 38
TkNotEqual           : 33 58
TkNum                : 16 16 25 31 53 73 94 106
TkOpenParent         : 47 71
TkOr                 : 36
TkPlaceBlock         : 25 26 27
TkPlus               : 63
TkRed                : 21
TkRepeat             : 94
TkSemiColon          : 9 11 25 26 27 28 29 30 31 79 81 101 102 103 104 105 106 107 108 109
TkSouth              : 20
TkSpace              : 116
TkStartAt            : 28
TkTab                : 112
TkTake               : 104
TkTerminate          : 108
TkThen               : 92 93
TkTimes              : 94
TkTrue               : 29 48
TkTurnL              : 102
TkTurnR              : 103
TkWest               : 19
TkWhile              : 95
TkYellow             : 24
error                : 

Nonterminals, with rules where they appear

assignBool           : 82
assignInt            : 83
beginInstruction     : 87
beginS               : 4
beginScenario        : 1
beginT               : 74
beginTask            : 1
boolC                : 41
boolElement          : 38 39
boolExpression       : 32 33 47 90 92 93 95
boolFactor           : 35 36 37
boolId               : 40
boolIntExpression    : 46
boolTerm             : 32 33 34 35 36
boolean              : 14
color                : 27 55
defineInstruction    : 88
detectFront          : 44
detectLeft           : 42
detectRight          : 43
empty                : 2
endS                 : 4
endT                 : 74
idBlockIs            : 45
if                   : 84
ignore               : 3
instDefine           : 98
instruction          : 78 80 92 93 93 94 95 100
intConst             : 70
intElement           : 66 67 68
intExpression        : 57 57 58 58 59 59 60 60 61 61 62 62 63 64 71 91
intId                : 69
intTerm              : 63 64 65 66 67
integer              : 15
orientation          : 28
placeBlock           : 12
position             : 25 26 27 28
repeat               : 85
scenarioInstruction  : 8 10
scenarioInstructions : 6 8 9
startAt              : 13
startDefine          : 98
taskInstruction      : 76 78 79 96
universo             : 0
while                : 86
willyInstruction     : 89
willyInstructionId   : 109

Parsing method: LALR

state 0

    (0) S' -> . universo
    (1) universo -> . beginScenario beginTask
    (2) universo -> . empty
    (3) universo -> . ignore
    (4) beginScenario -> . beginS endS
    (111) empty -> .
    (112) ignore -> . TkTab
    (113) ignore -> . TkNewLine
    (114) ignore -> . TkLineComment
    (115) ignore -> . TkBlockComment
    (116) ignore -> . TkSpace
    (5) beginS -> . TkBeginScenario

    $end            reduce using rule 111 (empty -> .)
    TkTab           shift and go to state 6
    TkNewLine       shift and go to state 7
    TkLineComment   shift and go to state 8
    TkBlockComment  shift and go to state 9
    TkSpace         shift and go to state 10
    TkBeginScenario shift and go to state 11

    universo                       shift and go to state 1
    beginScenario                  shift and go to state 2
    empty                          shift and go to state 3
    ignore                         shift and go to state 4
    beginS                         shift and go to state 5

state 1

    (0) S' -> universo .



state 2

    (1) universo -> beginScenario . beginTask
    (74) beginTask -> . beginT endT
    (75) beginT -> . TkBeginTask

    TkBeginTask     shift and go to state 14

    beginTask                      shift and go to state 12
    beginT                         shift and go to state 13

state 3

    (2) universo -> empty .

    $end            reduce using rule 2 (universo -> empty .)


state 4

    (3) universo -> ignore .

    $end            reduce using rule 3 (universo -> ignore .)


state 5

    (4) beginScenario -> beginS . endS
    (6) endS -> . scenarioInstructions TkEndScenario
    (7) endS -> . TkEndScenario
    (8) scenarioInstructions -> . scenarioInstructions scenarioInstruction
    (9) scenarioInstructions -> . scenarioInstructions TkSemiColon
    (10) scenarioInstructions -> . scenarioInstruction
    (11) scenarioInstructions -> . TkSemiColon
    (12) scenarioInstruction -> . placeBlock
    (13) scenarioInstruction -> . startAt
    (14) scenarioInstruction -> . boolean
    (15) scenarioInstruction -> . integer
    (25) placeBlock -> . TkPlaceBlock TkNum TkAt position TkSemiColon
    (26) placeBlock -> . TkPlaceBlock TkBNum TkAt position TkSemiColon
    (27) placeBlock -> . TkPlaceBlock color TkAt position TkSemiColon
    (28) startAt -> . TkStartAt position TkHeading orientation TkSemiColon
    (29) boolean -> . TkBoolean TkId TkEqual TkTrue TkSemiColon
    (30) boolean -> . TkBoolean TkId TkEqual TkFalse TkSemiColon
    (31) integer -> . TkInteger TkNId TkEqual TkNum TkSemiColon

    TkEndScenario   shift and go to state 17
    TkSemiColon     shift and go to state 19
    TkPlaceBlock    shift and go to state 24
    TkStartAt       shift and go to state 25
    TkBoolean       shift and go to state 26
    TkInteger       shift and go to state 27

    endS                           shift and go to state 15
    scenarioInstructions           shift and go to state 16
    scenarioInstruction            shift and go to state 18
    placeBlock                     shift and go to state 20
    startAt                        shift and go to state 21
    boolean                        shift and go to state 22
    integer                        shift and go to state 23

state 6

    (112) ignore -> TkTab .

    $end            reduce using rule 112 (ignore -> TkTab .)


state 7

    (113) ignore -> TkNewLine .

    $end            reduce using rule 113 (ignore -> TkNewLine .)


state 8

    (114) ignore -> TkLineComment .

    $end            reduce using rule 114 (ignore -> TkLineComment .)


state 9

    (115) ignore -> TkBlockComment .

    $end            reduce using rule 115 (ignore -> TkBlockComment .)


state 10

    (116) ignore -> TkSpace .

    $end            reduce using rule 116 (ignore -> TkSpace .)


state 11

    (5) beginS -> TkBeginScenario .

    TkEndScenario   reduce using rule 5 (beginS -> TkBeginScenario .)
    TkSemiColon     reduce using rule 5 (beginS -> TkBeginScenario .)
    TkPlaceBlock    reduce using rule 5 (beginS -> TkBeginScenario .)
    TkStartAt       reduce using rule 5 (beginS -> TkBeginScenario .)
    TkBoolean       reduce using rule 5 (beginS -> TkBeginScenario .)
    TkInteger       reduce using rule 5 (beginS -> TkBeginScenario .)


state 12

    (1) universo -> beginScenario beginTask .

    $end            reduce using rule 1 (universo -> beginScenario beginTask .)


state 13

    (74) beginTask -> beginT . endT
    (76) endT -> . taskInstruction TkEndTask
    (77) endT -> . TkEndTask
    (78) taskInstruction -> . taskInstruction instruction
    (79) taskInstruction -> . taskInstruction TkSemiColon
    (80) taskInstruction -> . instruction
    (81) taskInstruction -> . TkSemiColon
    (82) instruction -> . assignBool
    (83) instruction -> . assignInt
    (84) instruction -> . if
    (85) instruction -> . repeat
    (86) instruction -> . while
    (87) instruction -> . beginInstruction
    (88) instruction -> . defineInstruction
    (89) instruction -> . willyInstruction
    (90) assignBool -> . TkId TkEqual boolExpression
    (91) assignInt -> . TkNId TkEqual intExpression
    (92) if -> . TkIf boolExpression TkThen instruction
    (93) if -> . TkIf boolExpression TkThen instruction TkElse instruction
    (94) repeat -> . TkRepeat TkNum TkTimes instruction
    (95) while -> . TkWhile boolExpression TkDo instruction
    (96) beginInstruction -> . TkBegin taskInstruction TkEnd
    (97) beginInstruction -> . TkBegin TkEnd
    (98) defineInstruction -> . startDefine instDefine
    (101) willyInstruction -> . TkMove TkSemiColon
    (102) willyInstruction -> . TkTurnL TkSemiColon
    (103) willyInstruction -> . TkTurnR TkSemiColon
    (104) willyInstruction -> . TkTake TkSemiColon
    (105) willyInstruction -> . TkDrop TkSemiColon
    (106) willyInstruction -> . TkLevel TkNum TkSemiColon
    (107) willyInstruction -> . TkIdentify TkSemiColon
    (108) willyInstruction -> . TkTerminate TkSemiColon
    (109) willyInstruction -> . willyInstructionId TkSemiColon
    (99) startDefine -> . TkDefine TkId
    (110) willyInstructionId -> . TkId

    TkEndTask       shift and go to state 30
    TkSemiColon     shift and go to state 32
    TkId            shift and go to state 41
    TkNId           shift and go to state 42
    TkIf            shift and go to state 43
    TkRepeat        shift and go to state 44
    TkWhile         shift and go to state 45
    TkBegin         shift and go to state 46
    TkMove          shift and go to state 48
    TkTurnL         shift and go to state 49
    TkTurnR         shift and go to state 50
    TkTake          shift and go to state 51
    TkDrop          shift and go to state 52
    TkLevel         shift and go to state 53
    TkIdentify      shift and go to state 54
    TkTerminate     shift and go to state 55
    TkDefine        shift and go to state 57

    endT                           shift and go to state 28
    taskInstruction                shift and go to state 29
    instruction                    shift and go to state 31
    assignBool                     shift and go to state 33
    assignInt                      shift and go to state 34
    if                             shift and go to state 35
    repeat                         shift and go to state 36
    while                          shift and go to state 37
    beginInstruction               shift and go to state 38
    defineInstruction              shift and go to state 39
    willyInstruction               shift and go to state 40
    startDefine                    shift and go to state 47
    willyInstructionId             shift and go to state 56

state 14

    (75) beginT -> TkBeginTask .

    TkEndTask       reduce using rule 75 (beginT -> TkBeginTask .)
    TkSemiColon     reduce using rule 75 (beginT -> TkBeginTask .)
    TkId            reduce using rule 75 (beginT -> TkBeginTask .)
    TkNId           reduce using rule 75 (beginT -> TkBeginTask .)
    TkIf            reduce using rule 75 (beginT -> TkBeginTask .)
    TkRepeat        reduce using rule 75 (beginT -> TkBeginTask .)
    TkWhile         reduce using rule 75 (beginT -> TkBeginTask .)
    TkBegin         reduce using rule 75 (beginT -> TkBeginTask .)
    TkMove          reduce using rule 75 (beginT -> TkBeginTask .)
    TkTurnL         reduce using rule 75 (beginT -> TkBeginTask .)
    TkTurnR         reduce using rule 75 (beginT -> TkBeginTask .)
    TkTake          reduce using rule 75 (beginT -> TkBeginTask .)
    TkDrop          reduce using rule 75 (beginT -> TkBeginTask .)
    TkLevel         reduce using rule 75 (beginT -> TkBeginTask .)
    TkIdentify      reduce using rule 75 (beginT -> TkBeginTask .)
    TkTerminate     reduce using rule 75 (beginT -> TkBeginTask .)
    TkDefine        reduce using rule 75 (beginT -> TkBeginTask .)


state 15

    (4) beginScenario -> beginS endS .

    TkBeginTask     reduce using rule 4 (beginScenario -> beginS endS .)


state 16

    (6) endS -> scenarioInstructions . TkEndScenario
    (8) scenarioInstructions -> scenarioInstructions . scenarioInstruction
    (9) scenarioInstructions -> scenarioInstructions . TkSemiColon
    (12) scenarioInstruction -> . placeBlock
    (13) scenarioInstruction -> . startAt
    (14) scenarioInstruction -> . boolean
    (15) scenarioInstruction -> . integer
    (25) placeBlock -> . TkPlaceBlock TkNum TkAt position TkSemiColon
    (26) placeBlock -> . TkPlaceBlock TkBNum TkAt position TkSemiColon
    (27) placeBlock -> . TkPlaceBlock color TkAt position TkSemiColon
    (28) startAt -> . TkStartAt position TkHeading orientation TkSemiColon
    (29) boolean -> . TkBoolean TkId TkEqual TkTrue TkSemiColon
    (30) boolean -> . TkBoolean TkId TkEqual TkFalse TkSemiColon
    (31) integer -> . TkInteger TkNId TkEqual TkNum TkSemiColon

    TkEndScenario   shift and go to state 58
    TkSemiColon     shift and go to state 60
    TkPlaceBlock    shift and go to state 24
    TkStartAt       shift and go to state 25
    TkBoolean       shift and go to state 26
    TkInteger       shift and go to state 27

    scenarioInstruction            shift and go to state 59
    placeBlock                     shift and go to state 20
    startAt                        shift and go to state 21
    boolean                        shift and go to state 22
    integer                        shift and go to state 23

state 17

    (7) endS -> TkEndScenario .

    TkBeginTask     reduce using rule 7 (endS -> TkEndScenario .)


state 18

    (10) scenarioInstructions -> scenarioInstruction .

    TkEndScenario   reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)
    TkSemiColon     reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)
    TkPlaceBlock    reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)
    TkStartAt       reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)
    TkBoolean       reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)
    TkInteger       reduce using rule 10 (scenarioInstructions -> scenarioInstruction .)


state 19

    (11) scenarioInstructions -> TkSemiColon .

    TkEndScenario   reduce using rule 11 (scenarioInstructions -> TkSemiColon .)
    TkSemiColon     reduce using rule 11 (scenarioInstructions -> TkSemiColon .)
    TkPlaceBlock    reduce using rule 11 (scenarioInstructions -> TkSemiColon .)
    TkStartAt       reduce using rule 11 (scenarioInstructions -> TkSemiColon .)
    TkBoolean       reduce using rule 11 (scenarioInstructions -> TkSemiColon .)
    TkInteger       reduce using rule 11 (scenarioInstructions -> TkSemiColon .)


state 20

    (12) scenarioInstruction -> placeBlock .

    TkEndScenario   reduce using rule 12 (scenarioInstruction -> placeBlock .)
    TkSemiColon     reduce using rule 12 (scenarioInstruction -> placeBlock .)
    TkPlaceBlock    reduce using rule 12 (scenarioInstruction -> placeBlock .)
    TkStartAt       reduce using rule 12 (scenarioInstruction -> placeBlock .)
    TkBoolean       reduce using rule 12 (scenarioInstruction -> placeBlock .)
    TkInteger       reduce using rule 12 (scenarioInstruction -> placeBlock .)


state 21

    (13) scenarioInstruction -> startAt .

    TkEndScenario   reduce using rule 13 (scenarioInstruction -> startAt .)
    TkSemiColon     reduce using rule 13 (scenarioInstruction -> startAt .)
    TkPlaceBlock    reduce using rule 13 (scenarioInstruction -> startAt .)
    TkStartAt       reduce using rule 13 (scenarioInstruction -> startAt .)
    TkBoolean       reduce using rule 13 (scenarioInstruction -> startAt .)
    TkInteger       reduce using rule 13 (scenarioInstruction -> startAt .)


state 22

    (14) scenarioInstruction -> boolean .

    TkEndScenario   reduce using rule 14 (scenarioInstruction -> boolean .)
    TkSemiColon     reduce using rule 14 (scenarioInstruction -> boolean .)
    TkPlaceBlock    reduce using rule 14 (scenarioInstruction -> boolean .)
    TkStartAt       reduce using rule 14 (scenarioInstruction -> boolean .)
    TkBoolean       reduce using rule 14 (scenarioInstruction -> boolean .)
    TkInteger       reduce using rule 14 (scenarioInstruction -> boolean .)


state 23

    (15) scenarioInstruction -> integer .

    TkEndScenario   reduce using rule 15 (scenarioInstruction -> integer .)
    TkSemiColon     reduce using rule 15 (scenarioInstruction -> integer .)
    TkPlaceBlock    reduce using rule 15 (scenarioInstruction -> integer .)
    TkStartAt       reduce using rule 15 (scenarioInstruction -> integer .)
    TkBoolean       reduce using rule 15 (scenarioInstruction -> integer .)
    TkInteger       reduce using rule 15 (scenarioInstruction -> integer .)


state 24

    (25) placeBlock -> TkPlaceBlock . TkNum TkAt position TkSemiColon
    (26) placeBlock -> TkPlaceBlock . TkBNum TkAt position TkSemiColon
    (27) placeBlock -> TkPlaceBlock . color TkAt position TkSemiColon
    (21) color -> . TkRed
    (22) color -> . TkBlue
    (23) color -> . TkGreen
    (24) color -> . TkYellow

    TkNum           shift and go to state 61
    TkBNum          shift and go to state 62
    TkRed           shift and go to state 64
    TkBlue          shift and go to state 65
    TkGreen         shift and go to state 66
    TkYellow        shift and go to state 67

    color                          shift and go to state 63

state 25

    (28) startAt -> TkStartAt . position TkHeading orientation TkSemiColon
    (16) position -> . TkNum TkNum

    TkNum           shift and go to state 69

    position                       shift and go to state 68

state 26

    (29) boolean -> TkBoolean . TkId TkEqual TkTrue TkSemiColon
    (30) boolean -> TkBoolean . TkId TkEqual TkFalse TkSemiColon

    TkId            shift and go to state 70


state 27

    (31) integer -> TkInteger . TkNId TkEqual TkNum TkSemiColon

    TkNId           shift and go to state 71


state 28

    (74) beginTask -> beginT endT .

    $end            reduce using rule 74 (beginTask -> beginT endT .)


state 29

    (76) endT -> taskInstruction . TkEndTask
    (78) taskInstruction -> taskInstruction . instruction
    (79) taskInstruction -> taskInstruction . TkSemiColon
    (82) instruction -> . assignBool
    (83) instruction -> . assignInt
    (84) instruction -> . if
    (85) instruction -> . repeat
    (86) instruction -> . while
    (87) instruction -> . beginInstruction
    (88) instruction -> . defineInstruction
    (89) instruction -> . willyInstruction
    (90) assignBool -> . TkId TkEqual boolExpression
    (91) assignInt -> . TkNId TkEqual intExpression
    (92) if -> . TkIf boolExpression TkThen instruction
    (93) if -> . TkIf boolExpression TkThen instruction TkElse instruction
    (94) repeat -> . TkRepeat TkNum TkTimes instruction
    (95) while -> . TkWhile boolExpression TkDo instruction
    (96) beginInstruction -> . TkBegin taskInstruction TkEnd
    (97) beginInstruction -> . TkBegin TkEnd
    (98) defineInstruction -> . startDefine instDefine
    (101) willyInstruction -> . TkMove TkSemiColon
    (102) willyInstruction -> . TkTurnL TkSemiColon
    (103) willyInstruction -> . TkTurnR TkSemiColon
    (104) willyInstruction -> . TkTake TkSemiColon
    (105) willyInstruction -> . TkDrop TkSemiColon
    (106) willyInstruction -> . TkLevel TkNum TkSemiColon
    (107) willyInstruction -> . TkIdentify TkSemiColon
    (108) willyInstruction -> . TkTerminate TkSemiColon
    (109) willyInstruction -> . willyInstructionId TkSemiColon
    (99) startDefine -> . TkDefine TkId
    (110) willyInstructionId -> . TkId

    TkEndTask       shift and go to state 72
    TkSemiColon     shift and go to state 74
    TkId            shift and go to state 41
    TkNId           shift and go to state 42
    TkIf            shift and go to state 43
    TkRepeat        shift and go to state 44
    TkWhile         shift and go to state 45
    TkBegin         shift and go to state 46
    TkMove          shift and go to state 48
    TkTurnL         shift and go to state 49
    TkTurnR         shift and go to state 50
    TkTake          shift and go to state 51
    TkDrop          shift and go to state 52
    TkLevel         shift and go to state 53
    TkIdentify      shift and go to state 54
    TkTerminate     shift and go to state 55
    TkDefine        shift and go to state 57

    instruction                    shift and go to state 73
    assignBool                     shift and go to state 33
    assignInt                      shift and go to state 34
    if                             shift and go to state 35
    repeat                         shift and go to state 36
    while                          shift and go to state 37
    beginInstruction               shift and go to state 38
    defineInstruction              shift and go to state 39
    willyInstruction               shift and go to state 40
    startDefine                    shift and go to state 47
    willyInstructionId             shift and go to state 56

state 30

    (77) endT -> TkEndTask .

    $end            reduce using rule 77 (endT -> TkEndTask .)


state 31

    (80) taskInstruction -> instruction .

    TkEndTask       reduce using rule 80 (taskInstruction -> instruction .)
    TkSemiColon     reduce using rule 80 (taskInstruction -> instruction .)
    TkId            reduce using rule 80 (taskInstruction -> instruction .)
    TkNId           reduce using rule 80 (taskInstruction -> instruction .)
    TkIf            reduce using rule 80 (taskInstruction -> instruction .)
    TkRepeat        reduce using rule 80 (taskInstruction -> instruction .)
    TkWhile         reduce using rule 80 (taskInstruction -> instruction .)
    TkBegin         reduce using rule 80 (taskInstruction -> instruction .)
    TkMove          reduce using rule 80 (taskInstruction -> instruction .)
    TkTurnL         reduce using rule 80 (taskInstruction -> instruction .)
    TkTurnR         reduce using rule 80 (taskInstruction -> instruction .)
    TkTake          reduce using rule 80 (taskInstruction -> instruction .)
    TkDrop          reduce using rule 80 (taskInstruction -> instruction .)
    TkLevel         reduce using rule 80 (taskInstruction -> instruction .)
    TkIdentify      reduce using rule 80 (taskInstruction -> instruction .)
    TkTerminate     reduce using rule 80 (taskInstruction -> instruction .)
    TkDefine        reduce using rule 80 (taskInstruction -> instruction .)
    TkEnd           reduce using rule 80 (taskInstruction -> instruction .)


state 32

    (81) taskInstruction -> TkSemiColon .

    TkEndTask       reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkSemiColon     reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkId            reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkNId           reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkIf            reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkRepeat        reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkWhile         reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkBegin         reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkMove          reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkTurnL         reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkTurnR         reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkTake          reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkDrop          reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkLevel         reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkIdentify      reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkTerminate     reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkDefine        reduce using rule 81 (taskInstruction -> TkSemiColon .)
    TkEnd           reduce using rule 81 (taskInstruction -> TkSemiColon .)


state 33

    (82) instruction -> assignBool .

    TkEndTask       reduce using rule 82 (instruction -> assignBool .)
    TkSemiColon     reduce using rule 82 (instruction -> assignBool .)
    TkId            reduce using rule 82 (instruction -> assignBool .)
    TkNId           reduce using rule 82 (instruction -> assignBool .)
    TkIf            reduce using rule 82 (instruction -> assignBool .)
    TkRepeat        reduce using rule 82 (instruction -> assignBool .)
    TkWhile         reduce using rule 82 (instruction -> assignBool .)
    TkBegin         reduce using rule 82 (instruction -> assignBool .)
    TkMove          reduce using rule 82 (instruction -> assignBool .)
    TkTurnL         reduce using rule 82 (instruction -> assignBool .)
    TkTurnR         reduce using rule 82 (instruction -> assignBool .)
    TkTake          reduce using rule 82 (instruction -> assignBool .)
    TkDrop          reduce using rule 82 (instruction -> assignBool .)
    TkLevel         reduce using rule 82 (instruction -> assignBool .)
    TkIdentify      reduce using rule 82 (instruction -> assignBool .)
    TkTerminate     reduce using rule 82 (instruction -> assignBool .)
    TkDefine        reduce using rule 82 (instruction -> assignBool .)
    TkEnd           reduce using rule 82 (instruction -> assignBool .)
    TkElse          reduce using rule 82 (instruction -> assignBool .)


state 34

    (83) instruction -> assignInt .

    TkEndTask       reduce using rule 83 (instruction -> assignInt .)
    TkSemiColon     reduce using rule 83 (instruction -> assignInt .)
    TkId            reduce using rule 83 (instruction -> assignInt .)
    TkNId           reduce using rule 83 (instruction -> assignInt .)
    TkIf            reduce using rule 83 (instruction -> assignInt .)
    TkRepeat        reduce using rule 83 (instruction -> assignInt .)
    TkWhile         reduce using rule 83 (instruction -> assignInt .)
    TkBegin         reduce using rule 83 (instruction -> assignInt .)
    TkMove          reduce using rule 83 (instruction -> assignInt .)
    TkTurnL         reduce using rule 83 (instruction -> assignInt .)
    TkTurnR         reduce using rule 83 (instruction -> assignInt .)
    TkTake          reduce using rule 83 (instruction -> assignInt .)
    TkDrop          reduce using rule 83 (instruction -> assignInt .)
    TkLevel         reduce using rule 83 (instruction -> assignInt .)
    TkIdentify      reduce using rule 83 (instruction -> assignInt .)
    TkTerminate     reduce using rule 83 (instruction -> assignInt .)
    TkDefine        reduce using rule 83 (instruction -> assignInt .)
    TkEnd           reduce using rule 83 (instruction -> assignInt .)
    TkElse          reduce using rule 83 (instruction -> assignInt .)


state 35

    (84) instruction -> if .

    TkEndTask       reduce using rule 84 (instruction -> if .)
    TkSemiColon     reduce using rule 84 (instruction -> if .)
    TkId            reduce using rule 84 (instruction -> if .)
    TkNId           reduce using rule 84 (instruction -> if .)
    TkIf            reduce using rule 84 (instruction -> if .)
    TkRepeat        reduce using rule 84 (instruction -> if .)
    TkWhile         reduce using rule 84 (instruction -> if .)
    TkBegin         reduce using rule 84 (instruction -> if .)
    TkMove          reduce using rule 84 (instruction -> if .)
    TkTurnL         reduce using rule 84 (instruction -> if .)
    TkTurnR         reduce using rule 84 (instruction -> if .)
    TkTake          reduce using rule 84 (instruction -> if .)
    TkDrop          reduce using rule 84 (instruction -> if .)
    TkLevel         reduce using rule 84 (instruction -> if .)
    TkIdentify      reduce using rule 84 (instruction -> if .)
    TkTerminate     reduce using rule 84 (instruction -> if .)
    TkDefine        reduce using rule 84 (instruction -> if .)
    TkEnd           reduce using rule 84 (instruction -> if .)
    TkElse          reduce using rule 84 (instruction -> if .)


state 36

    (85) instruction -> repeat .
